update from local avt to gravatar

--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -11,7 +11,11 @@
             integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
             crossorigin="anonymous"
         />
-        <link rel="shortcut icon" href="/img/avatar.png" type="image/png" />
+        <link
+            rel="shortcut icon"
+            href="https://0.gravatar.com/avatar/69acb4dd43832e16b4eb65a43c2971ac?s=800"
+            type="image/png"
+        />
         <link rel="stylesheet" href="/css/edit.css" />
         <script th:inline="javascript">
             const initName = /*[[${music.name}]]*/ "";
