--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,7 +13,11 @@
         />
         <script src="/js/home.js" defer></script>
         <link rel="stylesheet" href="/css/home.css" />
-        <link rel="shortcut icon" href="/img/avatar.png" type="image/png" />
+        <link
+            rel="shortcut icon"
+            href="https://0.gravatar.com/avatar/69acb4dd43832e16b4eb65a43c2971ac?s=800"
+            type="image/png"
+        />
         <script>
             const deleteMusic = (id) => {
                 const deleteBtn = document.querySelector(".delete-" + id);
